[gd_scene load_steps=5 format=3 uid="uid://b3tqbrkmhxfuw"]

[ext_resource type="Script" uid="uid://bl2wrjow882ml" path="res://HUD.gd" id="1_mvsta"]

[sub_resource type="SystemFont" id="SystemFont_3ebo7"]
subpixel_positioning = 0

[sub_resource type="InputEventAction" id="InputEventAction_k5de2"]
action = &" StartGame"

[sub_resource type="Shortcut" id="Shortcut_efote"]
events = [SubResource("InputEventAction_k5de2")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_mvsta")

[node name="Water" type="LineEdit" parent="."]
offset_left = 32.0
offset_top = 176.0
offset_right = 480.0
offset_bottom = 264.0
theme_override_colors/clear_button_color_pressed = Color(0, 0, 0, 1)
placeholder_text = "Water in Litres"
alignment = 1
max_length = 100

[node name="Humidity" type="LineEdit" parent="."]
offset_left = 40.0
offset_top = 344.0
offset_right = 494.0
offset_bottom = 447.0
theme_override_colors/clear_button_color_pressed = Color(0, 0, 0, 1)
placeholder_text = "Humidiy %"
alignment = 1
max_length = 100

[node name="Cloud" type="LineEdit" parent="."]
offset_left = 24.0
offset_top = 8.0
offset_right = 502.0
offset_bottom = 127.0
theme_override_colors/clear_button_color_pressed = Color(0, 0, 0, 1)
placeholder_text = "Cloud cover in Factor"
alignment = 1
max_length = 100
keep_editing_on_text_submit = true

[node name="Temperature" type="LineEdit" parent="."]
offset_left = 40.0
offset_top = 544.0
offset_right = 502.0
offset_bottom = 663.0
theme_override_colors/clear_button_color_pressed = Color(0, 0, 0, 1)
placeholder_text = "Temperature In celcius"
alignment = 1
max_length = 100

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -95.5
offset_top = -44.0
offset_right = 95.5
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("SystemFont_3ebo7")
theme_override_font_sizes/font_size = 32
text = "The spawn Experiment"

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -100.0
offset_right = 250.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 64
toggle_mode = true
shortcut = SubResource("Shortcut_efote")
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]

[connection signal="toggled" from="StartButton" to="." method="_on_start_button_toggled"]
